// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionCardSnapshot should render pending transaction card 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderLeftColor": "#fd6542",
          "borderLeftWidth": 10,
          "borderRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingVertical": 25,
        },
        Object {
          "borderLeftColor": "#fd6542",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
          }
        }
      >
        SENDER Bank
         → 
        BENEF Bank
      </Text>
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        BENEF NAME
      </Text>
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Rp11.000
         • 
        7 August 2020
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "borderWidth": 1,
            "padding": 10,
          },
          Object {
            "backgroundColor": "white",
            "borderColor": "#fd6542",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontWeight": "bold",
            },
            Object {
              "color": "black",
            },
          ]
        }
      >
        Pengecekkan
      </Text>
    </View>
  </View>
</View>
`;

exports[`TransactionCardSnapshot should render success transaction card 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderLeftColor": "#fd6542",
          "borderLeftWidth": 10,
          "borderRadius": 10,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 10,
          "paddingLeft": 5,
          "paddingRight": 5,
          "paddingVertical": 25,
        },
        Object {
          "borderLeftColor": "#4fb785",
        },
      ]
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 24,
            "fontWeight": "bold",
          }
        }
      >
        SENDER Bank
         → 
        BENEF Bank
      </Text>
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        BENEF NAME
      </Text>
      <Text
        style={
          Object {
            "fontWeight": "500",
          }
        }
      >
        Rp11.000
         • 
        7 August 2020
      </Text>
    </View>
    <View
      style={
        Array [
          Object {
            "borderRadius": 10,
            "borderWidth": 1,
            "padding": 10,
          },
          Object {
            "backgroundColor": "#4fb785",
            "borderColor": "#4fb785",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontWeight": "bold",
            },
            Object {
              "color": "white",
            },
          ]
        }
      >
        Berhasil
      </Text>
    </View>
  </View>
</View>
`;
